--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -33,7 +33,7 @@
                         {% endif %}
                     </span>
                     {% if post.category %}
-                        <span class="text-right"><span class="font-italic h6">В теме</span> <a
+                        <span class="text-right"><span class="font-italic h6">В разделе</span> <a
                                 href="{{ post.category.get_absolute_url }}"
                                 class="h5">{{ post.category.title }}</a></span>
                     {% else %}
