--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -240,7 +240,7 @@
                                                            class="h6">{{ match.team_guest.title }}</a>
                                                     {% endif %}
                                                 </td>
-                                                <td style="width: 13.1%">
+                                                <td style="width: 12.5%;">
 
                                                 </td>
                                             </tr>
